--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@ a:hover {
   color: #535bf2;
 }
 
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   display: flex;
